--- a/gb/17/8/28/n9574498.md
+++ b/gb/17/8/28/n9574498.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hcrfxw336/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/hcrfxw336/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/hcrfxw336/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hcrfxw336/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hcrfxw336/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hcrfxw336/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hcrfxw336/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hcrfxw336/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>兴大教授：微生物工程可替代基因改造</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/a8acdd5c600e6eba5264cd0f6d5f4b5e-600x400.jpg" />
 <h6>兴大生命科学院副院长黄介辰对“基改工程”提出看法，他不认为基改会直接对人类身体有影响，真正受影响的是“生态”。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2017年08月28日讯】（大纪元记者黄玉燕台湾台中报导）<ahref="https://github.com/hcrfxw336/djy/blob/master/gb/tag/%E5%9F%BA%E5%9B%A0%E6%94%B9%E9%80%A0.md#1">基因改造</a>工程在台湾引发两派论战，中兴大学日前发布“香蕉种苗疫苗工程”，强调可以透过<ahref="https://github.com/hcrfxw336/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%9F%E7%89%A9.md#1">微生物</a>技术进入植株体内，预防香蕉癌症“叶黄病”的侵袭，预计效果可达到7成。而此举也为农业科技另辟蹊径，避开基因转殖工程带来的疑虑。</p>
+<p>【大纪元2017年08月28日讯】（大纪元记者黄玉燕台湾台中报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9F%BA%E5%9B%A0%E6%94%B9%E9%80%A0.md#1">基因改造</a>工程在台湾引发两派论战，中兴大学日前发布“香蕉种苗疫苗工程”，强调可以透过<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%9F%E7%89%A9.md#1">微生物</a>技术进入植株体内，预防香蕉癌症“叶黄病”的侵袭，预计效果可达到7成。而此举也为农业科技另辟蹊径，避开基因转殖工程带来的疑虑。</p>
 <p>兴大植物疫苗工程由生命科学院副院长黄介辰主持，他在接受大纪元专访时对“基改工程”也提出看法，他不认为基改会直接对人类身体有影响，真正受影响的应是“生态”。</p>
 <p>举最常见的苏力菌中的抗虫蛋白，他说，转殖进番茄中是为了杀掉昆虫，对人并不会有影响。但是当这个产品推出真正会有影响的却是“生态”，因为好虫、坏虫去吃、全部都死光，但依照美国FDA法规，却只有看作物与人的关系，生态却未在验证范围内，他强调，“这是欠考虑的。”</p>
-<p><strong><ahref="https://github.com/hcrfxw336/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%9F%E7%89%A9.md#1">微生物</a>创造新系统 效果不输基改技术</strong></p>
+<p><strong><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%9F%E7%89%A9.md#1">微生物</a>创造新系统 效果不输基改技术</strong></p>
 <p>提到研发微生物技术的源起，黄介辰说，科学家发现所有生物都浸泡在微生物的酱缸里面，人的一部分机能必须靠微生物来帮忙，那么植物与微生物之间又是怎样的关系呢?他说，因为法规上一直绑着，基改研究最后就会没有用，“因此想到透过天然微生物的力量，就是不透过基转，让植物也能有一些功能。”</p>
 <p>他举例说，曾在实验室培养皿中，放进有毒的物质，随着毒性越强，植物长得越不好，这时让微生物进去植物中，发现就可以保持得很好，也就是说微生物在植物中，可以帮忙把毒物分解掉，而这个效果，并不会比“把基因放进植物中”来得差。</p>
 <p>他说，因此就想，只要让微生物有效进入植物中，也许就可以创造新的系统，就不用再去基转到植物中了。</p>
@@ -37,48 +37,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/9/10/9/n2683774.md#1">A型H1N1风暴中 如何防疫延寿的临床省思（二）</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/3/15/n2845723.md#1">科学家破解罂粟花基因密码</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/4/12/n2874662.md#1">李晓宇：转基因作物 欧美认识分歧却同向末路</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/5/14/n2901495.md#1">新流感病毒风暴中  如何防疫延寿的临床省思</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/10/11/n3051178.md#1">蜜蜂大减原因揭晓 病毒、真菌是凶手</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/11/13/n3084017.md#1">【新纪元】中国粮食危机</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/11/14/n3084382.md#1">探秘高果糖玉米糖浆--HFCS</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/11/9/28/n3385873.md#1">活的密码？ 科学家以细菌加密</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/12/4/14/n3565837.md#1">基因改造灭种黑幕：基因改造食品(上)</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/12/4/14/n3565838.md#1">基因改造灭种黑幕：基因改造食品(中)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/10/9/n2683774.md#1">A型H1N1风暴中 如何防疫延寿的临床省思（二）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/3/15/n2845723.md#1">科学家破解罂粟花基因密码</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/12/n2874662.md#1">李晓宇：转基因作物 欧美认识分歧却同向末路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/5/14/n2901495.md#1">新流感病毒风暴中  如何防疫延寿的临床省思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/10/11/n3051178.md#1">蜜蜂大减原因揭晓 病毒、真菌是凶手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/13/n3084017.md#1">【新纪元】中国粮食危机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/14/n3084382.md#1">探秘高果糖玉米糖浆--HFCS</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/9/28/n3385873.md#1">活的密码？ 科学家以细菌加密</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/4/14/n3565837.md#1">基因改造灭种黑幕：基因改造食品(上)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/4/14/n3565838.md#1">基因改造灭种黑幕：基因改造食品(中)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/4/n10615598.md#1" target="_blank">卞世传：江泽民篡改扬州抗日史的卑劣无耻</a></li><li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12637943.md#1">【财商天下】中共后院着火 铁矿石升级“战略物资”</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/24/n12643080.md#1">【新闻大家谈】拜登赞川普 乔州议员将否本州票</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12640798.md#1">【时事军事】盗取空军战机 中美窃贼命运迥异</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12640816.md#1">拜登抱怨国防部不合作 五角大楼半夜发声明</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12641103.md#1">中共机构喊“上山下乡是壮举”被网民骂翻删帖</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12638646.md#1">黄晓明暴瘦10公斤 一日菜单吓坏网友</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12640869.md#1">六年情断 周迅与高圣远宣布离婚</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/21/n12636775.md#1">董璇回应假腿争议 摆一字马还写打油诗</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/24/n12642145.md#1">杜汶泽谈亲共艺人 林昶佐直播吸30万人</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12639283.md#1">GOT7合约明年1月到期 朴珍荣是否续约商议中</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12637180.md#1">巴西流浪汉理发变型男 被家人认出得以团聚</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/21/n12636539.md#1">山药补肾补气 还能养脾胃 5种自煮养生吃法</a></li>
-<li><a href="https://github.com/hcrfxw336/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12020333.md#1">欧盟公布台湾口罩抵达画面 中华民国国旗登官网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hcrfxw336/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hcrfxw336/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/28/n9574498.htm">兴大教授：微生物工程可替代基因改造</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/28/n9574498.htm">兴大教授：微生物工程可替代基因改造</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hcrfxw336/djy/blob/master/gb/17/8/28/n9574498.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hcrfxw336/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hcrfxw336/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hcrfxw336/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hcrfxw336/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcrfxw336/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/8/28/n9574498.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
